Updated jda to version 5
Everything should work :^)